Merged revisions 921-924 via svnmerge from https://fll-sw.svn.sourceforge.net/svnroot/fll-sw/branches/jpschewe
........
  r921 | jpschewe | 2009-06-24 09:10:07 -0500 (Wed, 24 Jun 2009) | 1 line
  
  Turned on FindBugs. Started fixing things that FindBugs finds.
........
  r922 | jpschewe | 2009-06-24 09:11:09 -0500 (Wed, 24 Jun 2009) | 1 line
  
  Removed non thread-safe usage of DateFormat
........
  r923 | jpschewe | 2009-06-24 09:12:58 -0500 (Wed, 24 Jun 2009) | 1 line
  
  Use quicker entrySet instead of keySet to avoid extra map lookup.
........
  r924 | jpschewe | 2009-06-24 21:56:00 -0500 (Wed, 24 Jun 2009) | 1 line
  
  Refactored full tournament test case to make it easier to read.
........